// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`codegen — colliding-routes fixture > generates the expected set of files 1`] = `
[
  "controllers/package-tenant/package-tenant.module.svelte.ts",
  "controllers/package-tenant/package-tenant.schema.svelte.ts",
  "enums.ts",
  "fields.ts",
  "mocked-params.svelte.ts",
  "reflector.svelte.ts",
]
`;

exports[`codegen — minimal fixture > generates the expected set of files 1`] = `
[
  "controllers/user/user.module.svelte.ts",
  "controllers/user/user.schema.svelte.ts",
  "enums.ts",
  "fields.ts",
  "mocked-params.svelte.ts",
  "reflector.svelte.ts",
]
`;

exports[`codegen — optional-array-bundle fixture (optional/nullable arrays of refs) > generates the expected set of files 1`] = `
[
  "controllers/package/package.module.svelte.ts",
  "controllers/package/package.schema.svelte.ts",
  "enums.ts",
  "fields.ts",
  "mocked-params.svelte.ts",
  "reflector.svelte.ts",
]
`;

exports[`codegen — sibling-lists fixture (two list-typed methods, different names) > generates the expected set of files 1`] = `
[
  "controllers/ai-chat-tenant/ai-chat-tenant.module.svelte.ts",
  "controllers/ai-chat-tenant/ai-chat-tenant.schema.svelte.ts",
  "enums.ts",
  "fields.ts",
  "mocked-params.svelte.ts",
  "reflector.svelte.ts",
]
`;
